overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,8 @@ body{
 	top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    overflow:scroll;
+    overflow-y:scroll;
+    overflow-x:hidden;
 
 }
 
